--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.16.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
+    "moment": "^2.19.3",
     "mongoose": "^4.13.6",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
